// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Account/Messages/Login gatewayInaccessibleErrorMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-kHWWFa iOXcUE loOVdQ alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
              fill="#F35143"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Trouble reaching manuscripts.io servers. Please try again later.
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login identityProviderErrorMessage - default 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-kHWWFa iOXcUE loOVdQ alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
              fill="#F35143"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          <span>
            An error occurred while logging in, please
             
            <button
              className="ContactSupportButton__InlineButton-sc-1693mpt-0 bvbUKx"
              onClick={[Function]}
            >
              contact support.
            </button>
          </span>
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login identityProviderErrorMessage - user not found 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-kHWWFa iOXcUE loOVdQ alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
              fill="#F35143"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          <span>
            A user record matching your identity was unexpectedly not found. Please 
            <button
              className="ContactSupportButton__InlineButton-sc-1693mpt-0 bvbUKx"
              onClick={[Function]}
            >
              contact support
            </button>
             if this persists.
          </span>
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login identityProviderErrorMessage - validation-error 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-kHWWFa iOXcUE loOVdQ alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
              fill="#F35143"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          <span>
            An invalid request was made when attempting to log in. Please
             
            <button
              className="ContactSupportButton__InlineButton-sc-1693mpt-0 bvbUKx"
              onClick={[Function]}
            >
              contact support
            </button>
             if this persists.
          </span>
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login infoLoginMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-hOPghE iOXcUE ejfhxV alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm0 1.5c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-16a1 1 0 110-2 1 1 0 010 2zm.02 10.2a.9.9 0 01-.9-.9v-7.2a.9.9 0 111.8 0v7.2a.9.9 0 01-.9.9z"
              fill="#1A9BC7"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Logged in successfully
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login networkErrorMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-kHWWFa iOXcUE loOVdQ alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
              fill="#F35143"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          <span>
            Failed to connect to service. Please check your network connection before trying again, and if the problem persists
             
            <button
              className="ContactSupportButton__InlineButton-sc-1693mpt-0 bvbUKx"
              onClick={[Function]}
            >
              contact support.
            </button>
          </span>
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login resendVerificationDataMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-bTDODP iOXcUE jhuEGn alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            className="sc-jUfxsr ezMBTZ"
            height={32}
            viewBox="0 0 32 32"
            width={32}
          >
            <defs>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-a"
              >
                <path
                  clipRule="evenodd"
                  d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079.012.009.01.012.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01.098-.08-.207.191z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-b"
              >
                <path
                  d="M0 0h24v24H0z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-c"
              >
                <path
                  d="M-15-16h54v55h-54z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-d"
              >
                <path
                  d="M0 0h24v24H0z"
                />
              </clipPath>
            </defs>
            <g
              clipPath="url(#svg-successgreen-a)"
              transform="matrix(1.33333 0 0 -1.33333 0 32)"
            >
              <g
                clipPath="url(#svg-successgreen-b)"
              >
                <g
                  clipPath="url(#svg-successgreen-c)"
                >
                  <g
                    clipPath="url(#svg-successgreen-d)"
                  >
                    <path
                      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079h0l.012.009.01.012h0l.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01h0l.098-.08z"
                      fill="none"
                      stroke="#36b260"
                      strokeMiterlimit={10}
                      strokeWidth={3}
                    />
                  </g>
                </g>
              </g>
            </g>
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Verification message send successfully to foobar@manuscripts.com
        </div>
        <button
          className="sc-ezzayL sc-jJMGHv sc-jHNhIU cRSqLN qAimf GPWUb"
          onClick={[Function]}
          type="button"
        >
          Re-send verification email.
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login verificationMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-kHWWFa iOXcUE loOVdQ alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
              fill="#F35143"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Account verification failed. Is the account already verified?
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login verificationMessage default 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-hOPghE iOXcUE ejfhxV alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm0 1.5c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-16a1 1 0 110-2 1 1 0 010 2zm.02 10.2a.9.9 0 01-.9-.9v-7.2a.9.9 0 111.8 0v7.2a.9.9 0 01-.9.9z"
              fill="#1A9BC7"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Verification failed
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Login warningLoginMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-dsXyEt iOXcUE bPfLto alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <circle
                cx={12}
                cy={18.7}
                fill="#FE8F1F"
                r={1}
              />
              <rect
                fill="#FE8F1F"
                height={9}
                rx={0.9}
                width={1.8}
                x={11.12}
                y={7.5}
              />
              <path
                d="M12.901 1.98l9.41 19.587a1 1 0 01-.9 1.433H2.59a1 1 0 01-.901-1.433l9.41-19.586a1 1 0 011.802 0z"
                stroke="#FE8F1F"
                strokeWidth={1.5}
              />
            </g>
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          This is a warning message
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Signup signupVerifyConflictMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-dsXyEt iOXcUE bPfLto alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <circle
                cx={12}
                cy={18.7}
                fill="#FE8F1F"
                r={1}
              />
              <rect
                fill="#FE8F1F"
                height={9}
                rx={0.9}
                width={1.8}
                x={11.12}
                y={7.5}
              />
              <path
                d="M12.901 1.98l9.41 19.587a1 1 0 01-.9 1.433H2.59a1 1 0 01-.901-1.433l9.41-19.586a1 1 0 011.802 0z"
                stroke="#FE8F1F"
                strokeWidth={1.5}
              />
            </g>
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Account already exists with foobar@manuscripts.com. Verification email has been re-sent to your email address.
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Signup signupVerifyMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-bTDODP iOXcUE jhuEGn alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            className="sc-jUfxsr ezMBTZ"
            height={32}
            viewBox="0 0 32 32"
            width={32}
          >
            <defs>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-a"
              >
                <path
                  clipRule="evenodd"
                  d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079.012.009.01.012.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01.098-.08-.207.191z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-b"
              >
                <path
                  d="M0 0h24v24H0z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-c"
              >
                <path
                  d="M-15-16h54v55h-54z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-d"
              >
                <path
                  d="M0 0h24v24H0z"
                />
              </clipPath>
            </defs>
            <g
              clipPath="url(#svg-successgreen-a)"
              transform="matrix(1.33333 0 0 -1.33333 0 32)"
            >
              <g
                clipPath="url(#svg-successgreen-b)"
              >
                <g
                  clipPath="url(#svg-successgreen-c)"
                >
                  <g
                    clipPath="url(#svg-successgreen-d)"
                  >
                    <path
                      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079h0l.012.009.01.012h0l.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01h0l.098-.08z"
                      fill="none"
                      stroke="#36b260"
                      strokeMiterlimit={10}
                      strokeWidth={3}
                    />
                  </g>
                </g>
              </g>
            </g>
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Thanks for signing up! Please click the link sent to foobar@manuscripts.com to verify your account.
        </div>
        <button
          className="sc-ezzayL sc-jJMGHv sc-jHNhIU cRSqLN qAimf GPWUb"
          onClick={[Function]}
          type="button"
        >
          Click here to re-send.
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Signup signupVerifyResendFailureMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-kHWWFa iOXcUE loOVdQ alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
              fill="#F35143"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Failed to re-send verification email to foobar@manuscripts.com.
        </div>
        <button
          className="sc-ezzayL sc-jJMGHv sc-jHNhIU cRSqLN qAimf GPWUb"
          onClick={[Function]}
          type="button"
        >
          Click here to retry.
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Messages/Signup signupVerifyResendSuccessMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-bTDODP iOXcUE jhuEGn alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            className="sc-jUfxsr ezMBTZ"
            height={32}
            viewBox="0 0 32 32"
            width={32}
          >
            <defs>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-a"
              >
                <path
                  clipRule="evenodd"
                  d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079.012.009.01.012.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01.098-.08-.207.191z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-b"
              >
                <path
                  d="M0 0h24v24H0z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-c"
              >
                <path
                  d="M-15-16h54v55h-54z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-d"
              >
                <path
                  d="M0 0h24v24H0z"
                />
              </clipPath>
            </defs>
            <g
              clipPath="url(#svg-successgreen-a)"
              transform="matrix(1.33333 0 0 -1.33333 0 32)"
            >
              <g
                clipPath="url(#svg-successgreen-b)"
              >
                <g
                  clipPath="url(#svg-successgreen-c)"
                >
                  <g
                    clipPath="url(#svg-successgreen-d)"
                  >
                    <path
                      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079h0l.012.009.01.012h0l.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01h0l.098-.08z"
                      fill="none"
                      stroke="#36b260"
                      strokeMiterlimit={10}
                      strokeWidth={3}
                    />
                  </g>
                </g>
              </g>
            </g>
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          <span>
            Verification email re-resent to 
            foobar@manuscripts.com
            . If you have not received it, please wait, check your spam box before
             
            <button
              className="ContactSupportButton__InlineButton-sc-1693mpt-0 bvbUKx"
              onClick={[Function]}
            >
              contacting support.
            </button>
          </span>
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Messages AddAuthorsMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    Add authors to your author list from your collaborators, or invite new ones
  </div>
</div>
`;

exports[`Storyshots Messages EmptyManuscriptsMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    No manuscripts yet
  </div>
</div>
`;

exports[`Storyshots Messages FeedbackMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    Post Feedback
  </div>
</div>
`;

exports[`Storyshots Messages ImportManuscriptMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    Use the + button to create a new Manuscript or import one from your computer.
  </div>
</div>
`;

exports[`Storyshots Messages ManageProfileMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    Details
  </div>
</div>
`;

exports[`Storyshots Messages ManuscriptsTitleMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    Manuscripts
  </div>
</div>
`;

exports[`Storyshots Messages MessageBanner 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="sc-eKYRpg sc-bTDODP iOXcUE jhuEGn alert-message"
    >
      <div
        className="sc-hmbsMR jcsba-d"
      >
        <div
          className="sc-jOFreG gmbONa"
        >
          <svg
            className="sc-jUfxsr ezMBTZ"
            height={32}
            viewBox="0 0 32 32"
            width={32}
          >
            <defs>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-a"
              >
                <path
                  clipRule="evenodd"
                  d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079.012.009.01.012.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01.098-.08-.207.191z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-b"
              >
                <path
                  d="M0 0h24v24H0z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-c"
              >
                <path
                  d="M-15-16h54v55h-54z"
                />
              </clipPath>
              <clipPath
                clipPathUnits="userSpaceOnUse"
                id="svg-successgreen-d"
              >
                <path
                  d="M0 0h24v24H0z"
                />
              </clipPath>
            </defs>
            <g
              clipPath="url(#svg-successgreen-a)"
              transform="matrix(1.33333 0 0 -1.33333 0 32)"
            >
              <g
                clipPath="url(#svg-successgreen-b)"
              >
                <g
                  clipPath="url(#svg-successgreen-c)"
                >
                  <g
                    clipPath="url(#svg-successgreen-d)"
                  >
                    <path
                      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079h0l.012.009.01.012h0l.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01h0l.098-.08z"
                      fill="none"
                      stroke="#36b260"
                      strokeMiterlimit={10}
                      strokeWidth={3}
                    />
                  </g>
                </g>
              </g>
            </g>
          </svg>
        </div>
        <div
          className="sc-daBvwG ETUjy"
        >
          Password reset was successful.
        </div>
      </div>
      <button
        className="sc-ezzayL sc-cBoprd sc-ciSmjq sc-amjdv cRSqLN cAfxFn ifa-DBT dNpmXb"
        onClick={[Function]}
        size={16}
        type="button"
      >
        <svg
          className="sc-jQAyEw erWFzz"
          height={26}
          viewBox="0 0 26 26"
          width={26}
        >
          <g
            fill="#6E6E6E"
            fillRule="evenodd"
          >
            <rect
              height={4}
              rx={2}
              transform="rotate(-45 13 13)"
              width={32}
              x={-3}
              y={11}
            />
            <rect
              height={4}
              rx={2}
              transform="scale(1 -1) rotate(-45 -18.385 0)"
              width={32}
              x={-3}
              y={11}
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Messages PreferencesMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    Preferences
  </div>
</div>
`;

exports[`Storyshots Messages SignInMessage 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    Sign in
  </div>
</div>
`;
